# needlepoint

./: .gitignore  HOTKEY_SUGGESTIONS.txt  IMPLEMENTATION_STATE.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs  routes.rs  state.rs
src-tauri/src/commands/: api.rs  filesystem.rs  generation.rs  graph.rs  mod.rs  orchestration.rs  project.rs
src-tauri/src/graph/: mod.rs  model.rs  serialization.rs  validation.rs
src-tauri/src/llm/: anthropic.rs  context.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/orchestration/: events.rs  executor.rs  mod.rs  planner.rs
src/components/editor/: CodePreview.tsx  EdgeEditor.tsx  ExportsEditor.tsx  LLMConfigEditor.tsx  NodeEditor.tsx
src/components/execution/: ExecutionMonitor.tsx
src/components/filetree/: FileTree.tsx
src/components/graph/: CodeNode.tsx  ContextMenu.tsx  DependencyEdge.tsx  GraphCanvas.tsx
src/components/layout/: Canvas.tsx  LeftPanel.tsx  PropertiesPanel.tsx  ResizablePanel.tsx  RightPanelToolbar.tsx  Sidebar.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: ConfirmDialog.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: fileTree.ts  tauri.ts  types.ts
src/stores/: executionStore.ts  projectStore.ts  settingsStore.ts  toastStore.ts  undoStore.ts
src/styles/: globals.css
